Add meta OG tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<title>Encode Justice France</title>
+		<meta property="og:title" content="L'IA, pour les humains." />
+		<meta
+			property="og:description"
+			content="Encode Justice est une organisation visant à une utilisation plus éthique de l'intelligence artificielle."
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
