--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 		</header>
 		<main>
 			<h1>
-				Pour une vision de l'
-				<span class="ai">IA</span>
-				centrée sur l'<span class="human">humain</span>.
+				Pour une vision de l'<span class="ai">IA</span> centrée sur l'<span
+					class="human"
+					>humain</span
+				>.
 			</h1>
 			<p>
 				<a target="_blank" class="ej-link" href="https://encodejustice.org/"
